# llm-inference-mcp

./: README.md  llms-install.md  mcpize.yaml  pyproject.toml  requirements.txt  server.py
src/llm_inference_mcp/: __init__.py  providers.py  router.py  server.py  tokenizer.py
