[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-inference-mcp"
version = "1.0.0"
description = "LLM Inference MCP Server - Multi-model routing, cost optimization, structured output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AI Expert", email = "344785647@qq.com" },
]
keywords = ["mcp", "llm", "inference", "openai", "vllm", "routing", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
llm-inference-mcp = "llm_inference_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_inference_mcp"]
